# cashier

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  stupid-admin-panel.md
.githooks/: pre-push
.github/workflows/: dokploy-webhook.yml  pr-tests.yml
apps/backend/: Dockerfile  package.json  tsconfig.json
apps/backend/catalog/: products.json
apps/backend/data/: products.json
apps/backend/src/: adminService.test.ts  adminService.ts  catalogSchema.test.ts  catalogSchema.ts  memberStore.ts  productStore.ts  requestContext.ts  server.ts  stockEventStore.ts  storage.ts  transactionService.test.ts  transactionService.ts  transactionStore.ts
apps/frontend/: .env.example  Dockerfile  index.html  package.json  serve.ts  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  qrcode.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/domain/: cart.test.ts  cart.ts  pricing.ts  productSection.test.ts  (+3 more)
backend/: pyproject.toml
backend/cashier/: conftest.py  constants.py  core.py  dependencies.py  main.py
backend/cashier/api/: __init__.py  products.py  test_products.py
backend/cashier/core/: config.py
backend/cashier/core/db/: config.py
backend/cashier/crud/: product.py
backend/cashier/models/: products.py
docs/: PLAN.md  customer-credit-feature-spec.md  security-gdpr-hardening-plan.md  todo.md
frontend/: Makefile
frontend/src/: index.html
frontend/src/js/: kobar.js
infra/: .env.example  backend.Dockerfile  container-entrypoint.sh  docker-compose.dokploy.yml  docker-compose.yml  frontend.Dockerfile  nginx.frontend.conf  runtime.Dockerfile
shared/: contract.ts  index.ts  models.ts  package.json  tsconfig.json
(+7 files in other folders)
