[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "cashier"
version = "1.0.0"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["ko-lab", "cashier", "tools"]
authors = [
  { name = "Sam Vervaeck", email = "samvv@pm.me" },
]
maintainers = [
  { name = "Sam Vervaeck", email = "samvv@pm.me" },
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Customer Service",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "fastapi==0.121.0",
  "SQLAlchemy==2.0.44",
  "python_multipart==0.0.20",
  "sqlmodel==0.0.27",
  "uvicorn (>=0.38.0,<0.39.0)",
  "pytest (>=9.0.1,<10.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/ko-lab/cashier"
"Bug Reports" = "https://github.com/ko-lab/cashier/issues"
"Source" = "https://github.com/ko-lab/cashier/"

# [project.scripts]
# sample = "sample:main"


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
packages = ["cashier"]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = { "sample" = ["*.dat"] }
